created search button

--- a/Index/index.html
+++ b/Index/index.html
@@ -7,10 +7,13 @@
 
         <div class="container">
             <header>
-
+                <form>
+                    <input type="text" placeholder="search">
+                    <button type="submit">Search</button>
+                </form>
             </header>
 
-            <div>
+            <div class="results">
 
             </div>
         </div>
@@ -19,7 +22,7 @@
         <script>
 
 
-            
+
         </script>
 
 
