Added giphy api

--- a/Index/index.html
+++ b/Index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Giphy API</title>
     </head>
     <body>
 
@@ -21,8 +21,10 @@
 
         <script>
 
-
-
+            const q = 'cats'
+            const apikey = 'z26ixcTXUlwPgGGZzb9ytIyvwtIIfImV'
+            const path = `https://https://api.giphy.com/v1/gifs/search?api_key=${apikey}&q=${q}`
+        
         </script>
 
 
