--- a/Index/index.html
+++ b/Index/index.html
@@ -25,6 +25,11 @@
             const apikey = 'z26ixcTXUlwPgGGZzb9ytIyvwtIIfImV'
             const path = `https://https://api.giphy.com/v1/gifs/search?api_key=${apikey}&q=${q}`
         
+            const p = fetch(path)
+            const p.then(function(res) {
+                return res.json()
+            })
+
         </script>
 
 
