Added promise callback 2

--- a/Index/index.html
+++ b/Index/index.html
@@ -26,8 +26,12 @@
             const path = `https://https://api.giphy.com/v1/gifs/search?api_key=${apikey}&q=${q}`
         
             const p = fetch(path)
-            const p.then(function(res) {
+            const p2 = p.then(function(res) {
                 return res.json()
+            })
+
+            p2.then(function(json) {
+
             })
 
         </script>
