--- a/Index/index.html
+++ b/Index/index.html
@@ -13,7 +13,7 @@
                 </form>
             </header>
 
-            <div class="results">
+            <div id="results" class="results">
 
             </div>
         </div>
@@ -29,9 +29,14 @@
                 return res.json()
             }).then(function(json) {
                 console.log(json.data[0].images.fixed_width.url)
+                const resultsEl = document.getElementById('results')
+                let resultsHTML = ''
+
                 json.data.forEach(function(obj) {
                     console.log(obj.images.fixed_width.url)
                 })
+
+                resultsEl.innerHTML = resultsHTML
             }).catch(function(err) {
                 console.log(err.message)
             })
