--- a/Index/index.html
+++ b/Index/index.html
@@ -34,6 +34,17 @@
 
                 json.data.forEach(function(obj) {
                     console.log(obj.images.fixed_width.url)
+                    const url = obj.images.fixed_width.url
+                    const width = obj.images.fixed_width.width
+                    const height = obj.images.fixed_width.height
+                    const title = obj.title
+                    
+                    resultsHTML += `<img 
+                    src="${url}" 
+                    width="${width}" 
+                    height="${height}"
+                    alt="${title}"
+                    >`
                 })
 
                 resultsEl.innerHTML = resultsHTML
