--- a/Index/index.html
+++ b/Index/index.html
@@ -8,7 +8,7 @@
         <div class="container">
             <header>
                 <form id="search-form">
-                    <input type="text" placeholder="search">
+                    <input id="search-input" type="text" placeholder="search">
                     <button type="submit">Search</button>
                 </form>
             </header>
@@ -22,9 +22,13 @@
         <script>
 
             const searchForm = document.getElementById('search-form')
+            const searchInput = document.getElementById('search-input')
+            const resultsEl = document.getElementById('results')
 
             searchForm.addEventListener('submit', function(e) {
                 e.preventDefault()
+                const q = searchInput.value 
+                search(q)
 
             })
 
@@ -36,7 +40,6 @@
                     return res.json()
                 }).then(function(json) {
                     console.log(json.data[0].images.fixed_width.url)
-                    const resultsEl = document.getElementById('results')
                     let resultsHTML = ''
 
                     json.data.forEach(function(obj) {
