--- a/Index/index.html
+++ b/Index/index.html
@@ -5,12 +5,34 @@
     </head>
     <body>
 
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Giphy Search Api</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
         <div class="container">
             <header>
                 <form id="search-form">
                     <input id="search-input" type="text" placeholder="search">
                     <button type="submit">Search</button>
                 </form>
+                <link rel="stylesheet" href="CSS/styles.scss"/>
             </header>
 
             <div id="results" class="results">
@@ -51,6 +73,7 @@
                         const title = obj.title
                     
                         resultsHTML += `<img 
+                            class="item"
                             src="${url}" 
                             width="${width}" 
                             height="${height}"
